--- a/Projektarbete/style.css
+++ b/Projektarbete/style.css
@@ -7,8 +7,18 @@ html {
   font-family: 'Roboto', sans-serif;
 }
 
+.background1 {
+  background-image: url('img/background1.jpg');
+  background-position: 100% 30%;
+}
+
+.background2 {
+  background-image: url('img/background2.jpg');
+  background-position: 50% 0%;
+}
+
 body {
-  width: 100vw;
+  width: 100%;
   background-color: #f1f1f1;
   color: #000;
   line-height: 1.5;
@@ -45,17 +55,17 @@ h2 {
 }
 
 .container {
-
-  width: 960px;
+  width: 70%;
 }
 
 .container h1 {
-    margin-bottom: 1.2rem;
+  margin-bottom: 1.2rem;
 }
 
 .box {
+  z-index: 80;
   border-radius: 15px;
-  box-shadow: 0 0 1rem rgba(77,77,79,.5);
+  box-shadow: 0 0 1rem rgba(77, 77, 79, .2);
 }
 
 section {
@@ -73,24 +83,31 @@ section .container {
 
 nav {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
+  flex-direction: column;
   position: fixed;
   z-index: 100;
+  width: 100%;
+  height: 200px;
+}
+
+.nav-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
   height: 90px;
   width: 100%;
   background-color: #fff;
-  box-shadow: 0 2px 4px 0 rgba(77,77,79,.2);
+  box-shadow: 0 2px 4px 0 rgba(77, 77, 79, .2);
 }
 
-nav .container {
+.nav-header .container {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 80%;
 }
 
-.small-logo, .menu{
+.nav-logo, .menu-icon {
   display: flex;
   align-items: center;
   height: 3rem;
@@ -98,32 +115,54 @@ nav .container {
   border-radius: 15%;
 }
 
-.small-logo img, .menu .menu-icon {
+.nav-logo img, .menu-icon .icon {
   border-radius: 15%;
   height: 100%;
   width: 100%;
 }
 
-.small-logo p {
-    margin-left: 1rem;
+.nav-logo p {
+  margin-left: 1rem;
   letter-spacing: 0.2rem;
   font-weight: 400;
   color: #4cd59a;
 }
 
-.small-logo img:hover,
- .menu-icon:hover {
-    transform: scale(1.1);
-    cursor: pointer;
-}
-
-.badge {
-  transition: all .2s ease-in-out;
-}
-
-.badge:hover {
-  cursor: pointer;
+.nav-logo img:hover,
+.icon:hover {
   transform: scale(1.1);
+  cursor: pointer;
+}
+
+.dropdown {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 90px;
+  width: 100%;
+}
+
+.dropdown-content {
+  display: none;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+  background-color: #fff;
+  box-shadow: 0 2px 4px 0 rgba(77, 77, 79, .2);
+}
+
+.menu-items {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 80%;
+}
+
+.menu-items ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 li:hover {
@@ -131,7 +170,7 @@ li:hover {
   text-decoration: underline;
 }
 
-.menu-icon {
+.icon {
   opacity: 0.56;
 }
 
@@ -140,49 +179,45 @@ li:hover {
   height: 80vh;
 }
 
-.hero-image {
+.background-image {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 100%;
-  background-image: url('img/background.jpg');
   background-size: cover;
-  background-position: 100% 30%;
   background-attachment: fixed;
   opacity: 0.8;
 }
 
-#intro-body h1 {
+.banner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+.banner h1 {
   font-size: 4rem;
   letter-spacing: 0.5rem;
-  color: rgba(0,220,158,1);
-  text-shadow: 0.2rem 0.2rem rgb(48,120,88);
+  color: rgba(0, 220, 158, 1);
+  text-shadow: 0.2rem 0.2rem rgb(48, 120, 88);
 }
 
-#intro-body h2 {
+.banner h2 {
   font-size: 2rem;
   font-weight: 100;
-}
-
-.big-logo {
-  width: 210px;
-  height: 210px;
-  margin: 2rem 0;
-  border-radius: 10%;
-  box-shadow: 0.5rem 0.5rem rgb(48,120,88);
-}
-
-.big-logo img {
-  width: 100%;
-  height: 100%;
+  color: #fff;
+  padding: 0.5rem 2rem;
+  opacity: 0.8;
+  background-color: rgb(0, 220, 158);
 }
 
 #section-one {
   background-color: #4cd59a;
   padding: 9rem 1.5rem;
   padding-bottom: 16rem;
-  box-shadow: inset 0 0.2rem 0.5rem rgba(48,120,88, 0.5);
+  box-shadow: inset 0 0.2rem 0.5rem rgba(48, 120, 88, 0.5);
 }
 
 .container-center {
@@ -202,8 +237,15 @@ li:hover {
 }
 
 .badge {
+  width: 215px;
   height: 75px;
   margin: 3rem;
+  transition: all .2s ease-in-out;
+}
+
+.badge:hover {
+  cursor: pointer;
+  transform: scale(1.1);
 }
 
 .container-center p, .container-center h1 {
@@ -212,19 +254,17 @@ li:hover {
 
 #section-one h1 {
   font-size: 3rem;
-  text-shadow: 0.2rem 0.2rem rgb(48,120,88);
+  text-shadow: 0.2rem 0.2rem rgb(48, 120, 88);
 }
-
 
 #section-two {
   margin-top: -14rem;
-  padding: 5rem 1.5rem;
-  padding-bottom: 1rem;
+  padding: 5rem 1.5rem 0 5rem;
   height: 100vh;
   background-attachment: fixed;
 }
 
-#section-two .container{
+#section-two .container {
   position: relative;
 }
 
@@ -237,6 +277,16 @@ li:hover {
   flex-direction: row;
 }
 
+#section-three {
+  margin-top: -14rem;
+  height: 40vh;
+}
+
+.bottom {
+  box-shadow: 0 -0.2rem 0.5rem rgba(0, 0, 0, 0.1);
+  min-height: 200px;
+}
+
 footer {
   display: flex;
   flex-direction: column;
@@ -244,14 +294,14 @@ footer {
   align-items: center;
   width: 100%;
   background-color: #fff;
-  box-shadow: 0 -2px 4px 0 rgba(77,77,79,.2);
+  box-shadow: 0 -2px 4px 0 rgba(77, 77, 79, .2);
 }
 
 footer h1 {
   font-size: 4rem;
   letter-spacing: 0.5rem;
-  color: rgba(0,220,158,1);
-  text-shadow: 0.2rem 0.2rem rgb(48,120,88);
+  color: rgba(0, 220, 158, 1);
+  text-shadow: 0.2rem 0.2rem rgb(48, 120, 88);
 }
 
 ul {
@@ -268,4 +318,81 @@ li {
   color: #4cd59a;
   font-size: 1.2rem;
   list-style: none;
+}
+
+@media (max-width: 1190px) {
+
+  .container {
+    width: 100%;
+  }
+
+  #section-two {
+    padding: 1rem 1.5rem;
+    height: auto;
+  }
+
+  #section-two .box {
+    background-color: rgba(0,0,0,0);
+    box-shadow: none;
+  }
+
+  .column {
+    margin: 1rem;
+    box-shadow: 0 0 1rem rgba(77, 77, 79, .2);
+  }
+
+  #section-three {
+    margin: 0;
+  }
+}
+
+@media (max-width: 840px) {
+  .menu-items {
+    width: 100%;
+  }
+
+  #section-two .content {
+    flex-direction: column;
+  }
+
+  .badge-container {
+    flex-direction: column;
+  }
+
+  .badge {
+    margin: 2rem;
+  }
+}
+
+@media (max-width: 680px) {
+  nav {
+    height: 100vh;
+  }
+
+  .nav-header {
+    z-index: 100;
+  }
+
+  .dropdown {
+    height: 50vh;
+    width: 100%;
+    z-index: 90;
+    justify-content: flex-end;
+  }
+
+  .dropdown-content {
+    width: auto;
+    align-items: stretch;
+    border-radius: 0 0 0 15px;
+  }
+
+  .menu-items {
+    justify-content: flex-end;
+  }
+
+  .menu-items ul {
+    width: auto;
+    flex-direction: column;
+    text-align: right;
+  }
 }
