--- a/Projektarbete/style.css
+++ b/Projektarbete/style.css
@@ -3,7 +3,12 @@
   padding: 0;
 }
 
+a {
+  text-decoration: none;
+}
+
 html {
+  scroll-behavior: smooth;
   font-family: 'Roboto', sans-serif;
 }
 
@@ -15,6 +20,12 @@ html {
 .background2 {
   background-image: url('img/background2.jpg');
   background-position: 50% 0%;
+}
+
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 body {
@@ -68,17 +79,8 @@ h2 {
   box-shadow: 0 0 1rem rgba(77, 77, 79, .2);
 }
 
-section {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 section .container {
-  display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
 nav {
@@ -107,7 +109,19 @@ nav {
   width: 80%;
 }
 
-.nav-logo, .menu-icon {
+.nav-logo {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.logo, .logo img {
+  height: 3rem;
+  width: 3rem;
+}
+
+.menu-icon {
   display: flex;
   align-items: center;
   height: 3rem;
@@ -115,7 +129,7 @@ nav {
   border-radius: 15%;
 }
 
-.nav-logo img, .menu-icon .icon {
+.icon {
   border-radius: 15%;
   height: 100%;
   width: 100%;
@@ -261,7 +275,8 @@ li:hover {
   margin-top: -14rem;
   padding: 5rem 1.5rem 0 5rem;
   height: 100vh;
-  background-attachment: fixed;
+  display: flex;
+  justify-content: center;
 }
 
 #section-two .container {
@@ -321,7 +336,6 @@ li {
 }
 
 @media (max-width: 1190px) {
-
   .container {
     width: 100%;
   }
@@ -332,7 +346,7 @@ li {
   }
 
   #section-two .box {
-    background-color: rgba(0,0,0,0);
+    background-color: rgba(0, 0, 0, 0);
     box-shadow: none;
   }
 
