--- a/Projektarbete/style.css
+++ b/Projektarbete/style.css
@@ -14,12 +14,20 @@ html {
 
 .background1 {
   background-image: url('img/background1.jpg');
-  background-position: 100% 30%;
+  background-position: 100% 0%;
 }
 
 .background2 {
   background-image: url('img/background2.jpg');
   background-position: 50% 0%;
+}
+
+.background-image {
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-attachment: fixed;
+  opacity: 0.8;
 }
 
 .center {
@@ -115,7 +123,7 @@ nav {
 
 .logo, .logo img {
   height: 3rem;
-  width: 3rem;
+  width: auto;
 }
 
 .menu-icon {
@@ -183,14 +191,6 @@ li:hover {
 #section-zero {
   padding-top: 90px;
   height: 80vh;
-}
-
-.background-image {
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-  background-attachment: fixed;
-  opacity: 0.8;
 }
 
 .banner {
