--- a/Projektarbete/style.css
+++ b/Projektarbete/style.css
@@ -5,6 +5,16 @@
 
 a {
   text-decoration: none;
+
+}
+
+a:active, a:visited, a:focus, a:link {
+  color: rgba(0, 0, 0, 0.89);
+}
+
+.column a:active, .column a:visited, .column a:focus,
+.column a:link {
+  color: #fff;
 }
 
 html {
@@ -14,20 +24,15 @@ html {
 
 .background1 {
   background-image: url('img/background1.jpg');
-  background-position: 100% 0%;
-}
-
-.background2 {
-  background-image: url('img/background2.jpg');
-  background-position: 50% 0%;
+  background-position: 50% 0;
 }
 
 .background-image {
-  width: 100%;
-  height: 100%;
+  width: 80%;
+  height: 80%;
   background-size: cover;
-  background-attachment: fixed;
   opacity: 0.8;
+  border: solid 8px #fff;
 }
 
 .center {
@@ -37,8 +42,9 @@ html {
 }
 
 body {
+  overflow-y: scroll;
   width: 100%;
-  background-color: #f1f1f1;
+  background-color: #000;
   color: #000;
   line-height: 1.5;
 }
@@ -48,29 +54,48 @@ p {
   font-weight: 300;
   font-size: 1.2rem;
   line-height: 1.5;
+  padding: 2rem 0;
 }
 
 h1 {
-  opacity: 0.89;
-  font-weight: 500;
-  font-size: 2rem;
+  text-transform: uppercase;
+  font-weight: 900;
+  font-size: 3rem;
+  letter-spacing: 2rem;
+  text-shadow: 0.2rem 0.2rem rgba(0, 0, 0, 0.38);
 }
 
 h2 {
+  letter-spacing: 0.2rem;
   font-weight: 400;
   opacity: 0.56;
 }
 
 .column {
-  background-color: #fff;
-  border-bottom: 0px solid #E6ECF8;
-  border-right: 1px solid #E6ECF8;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-image: linear-gradient(#fff, #919496);
+  margin: 1rem;
   padding: 60px 35px;
-  border-radius: 15px;
+}
+
+.column h1 {
+  letter-spacing: 0.5rem;
 }
 
 .column:last-child {
   border: none;
+}
+
+.column img {
+  border: 1rem solid #fff;
+  max-height: 400px;
+}
+
+.column ul {
+  margin: 2rem;
 }
 
 .container {
@@ -81,10 +106,11 @@ h2 {
   margin-bottom: 1.2rem;
 }
 
-.box {
-  z-index: 80;
-  border-radius: 15px;
-  box-shadow: 0 0 1rem rgba(77, 77, 79, .2);
+section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 section .container {
@@ -97,7 +123,6 @@ nav {
   position: fixed;
   z-index: 100;
   width: 100%;
-  height: 200px;
 }
 
 .nav-header {
@@ -126,44 +151,10 @@ nav {
   width: auto;
 }
 
-.menu-icon {
-  display: flex;
-  align-items: center;
-  height: 3rem;
-  width: 3rem;
-  border-radius: 15%;
-}
-
-.icon {
-  border-radius: 15%;
-  height: 100%;
-  width: 100%;
-}
-
-.nav-logo p {
-  margin-left: 1rem;
-  letter-spacing: 0.2rem;
-  font-weight: 400;
-  color: #4cd59a;
-}
-
 .nav-logo img:hover,
 .icon:hover {
   transform: scale(1.1);
   cursor: pointer;
-}
-
-.dropdown {
-  height: 90px;
-  width: 100%;
-}
-
-.dropdown-content {
-  display: none;
-  height: 100%;
-  width: 100%;
-  background-color: #fff;
-  box-shadow: 0 2px 4px 0 rgba(77, 77, 79, .2);
 }
 
 .menu-items {
@@ -176,97 +167,77 @@ nav {
 .menu-items ul {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-start;
 }
 
-li:hover {
-  cursor: pointer;
+.menu-items li {
+  padding: 0 2rem;
+}
+
+.menu-items a:hover {
   text-decoration: underline;
 }
 
-.icon {
-  opacity: 0.56;
+section:first-of-type {
+  padding-top: 90px;
 }
 
 #section-zero {
-  padding-top: 90px;
   height: 80vh;
 }
 
-.banner {
-  width: 100%;
-}
-
-.banner h1 {
-  font-size: 4rem;
-  letter-spacing: 0.5rem;
-  color: rgba(0, 220, 158, 1);
-  text-shadow: 0.2rem 0.2rem rgb(48, 120, 88);
-}
-
-.banner h2 {
-  font-size: 2rem;
-  font-weight: 100;
+.button {
+  padding: 20px;
+  margin-top: 40px;
+  width: 80%;
+  background-color: rgba(0, 0, 0, 89);
   color: #fff;
-  padding: 0.5rem 2rem;
-  opacity: 0.8;
-  background-color: rgb(0, 220, 158);
+  transition-duration: 0.3s;
+  text-align: center;
 }
 
-#section-one {
-  background-color: #4cd59a;
-  padding: 9rem 1.5rem;
-  padding-bottom: 16rem;
-  box-shadow: inset 0 0.2rem 0.5rem rgba(48, 120, 88, 0.5);
+.button:hover {
+  cursor: pointer;
+  opacity: 0.8;
+}
+
+.button p {
+  padding: 0;
 }
 
 #section-one h1 {
-  font-size: 3rem;
-  text-shadow: 0.2rem 0.2rem rgb(48, 120, 88);
+
 }
 
-.download {
+.banner {
   flex-direction: column;
   width: 80%;
   text-align: center;
-  color: #fff;
-}
-
-.badge-container {
-  flex-direction: row;
-}
-
-.badge {
-  width: 215px;
-  height: 75px;
-  margin: 3rem;
-  transition: all .2s ease-in-out;
-}
-
-.badge:hover {
-  cursor: pointer;
-  transform: scale(1.1);
+  color: #919496;
+  margin: 4rem;
 }
 
 #section-two {
-  margin-top: -14rem;
-  padding: 5rem 1.5rem 0 5rem;
-  height: 100vh;
   display: flex;
   justify-content: center;
 }
 
-#section-two .container {
-  position: relative;
+#section-two .content {
+    width: 100%;
 }
 
-#section-two .box {
-  background-color: #f1f1f1;
+#section-two .column {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 50%;
+  min-height: 100%;
 }
 
 .content {
   display: flex;
   flex-direction: row;
+  justify-content: center;
 }
 
 #section-three {
@@ -274,39 +245,38 @@ li:hover {
   height: 40vh;
 }
 
-.bottom {
-  box-shadow: 0 -0.2rem 0.5rem rgba(0, 0, 0, 0.1);
-  min-height: 200px;
-  text-align: center;
-}
-
 footer {
+  display: flex;
+  justify-content: center;
+  text-align: center;
   width: 100%;
-  background-color: #fff;
-  box-shadow: 0 -2px 4px 0 rgba(77, 77, 79, .2);
-}
-
-footer h1 {
-  font-size: 4rem;
-  letter-spacing: 0.5rem;
-  color: rgba(0, 220, 158, 1);
-  text-shadow: 0.2rem 0.2rem rgb(48, 120, 88);
+  min-height: 90px;
+  background-color: #000;
+  color: #919496;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin-top: 2rem;
 }
 
 ul {
-  width: 80%;
-  margin: 4rem;
-}
-
-ul p {
-  font-weight: 400;
-  margin-bottom: 0.5rem;
+  width: 100%;
 }
 
 li {
-  color: #4cd59a;
   font-size: 1.2rem;
+  font-weight: 300;
+  opacity: 0.89;
   list-style: none;
+}
+
+.music {
+  display: flex;
+  flex-direction: row;
+}
+
+iframe {
+  width: 100%;
+  min-height: 380px;
 }
 
 @media (max-width: 1190px) {
@@ -321,12 +291,10 @@ li {
 
   #section-two .box {
     background-color: rgba(0, 0, 0, 0);
-    box-shadow: none;
   }
 
   .column {
     margin: 1rem;
-    box-shadow: 0 0 1rem rgba(77, 77, 79, .2);
   }
 
   #section-three {
@@ -341,47 +309,20 @@ li {
 
   #section-two .content {
     flex-direction: column;
+    align-items: center;
   }
 
-  .badge-container {
+  #section-two .column {
+    width: 80%;
+  }
+
+  .music {
     flex-direction: column;
-  }
-
-  .badge {
-    margin: 2rem;
   }
 }
 
 @media (max-width: 680px) {
-  nav {
-    height: 100vh;
-  }
-
-  .nav-header {
-    z-index: 100;
-  }
-
-  .dropdown {
-    height: 50vh;
-    width: auto;
-    z-index: 90;
-    display: flex;
-    justify-content: flex-end;
-  }
-
-  .dropdown-content {
-    width: auto;
-    align-items: stretch;
-    border-radius: 0 0 0 15px;
-  }
-
-  .menu-items {
-    justify-content: flex-end;
-  }
-
-  .menu-items ul {
-    width: auto;
-    flex-direction: column;
-    text-align: right;
+  .menu-items li:first-child {
+    display: none;
   }
 }
