--- a/Projektarbete/style.css
+++ b/Projektarbete/style.css
@@ -92,6 +92,7 @@ h2 {
 .column img {
   border: 1rem solid #fff;
   max-height: 400px;
+  max-width: 90vw;
 }
 
 .column ul {
@@ -192,13 +193,13 @@ section:first-of-type {
   width: 80%;
   background-color: rgba(0, 0, 0, 89);
   color: #fff;
-  transition-duration: 0.3s;
+  transition-duration: 0.1s;
   text-align: center;
 }
 
 .button:hover {
   cursor: pointer;
-  opacity: 0.8;
+  transform: scale(1.03);
 }
 
 .button p {
@@ -303,8 +304,17 @@ iframe {
 }
 
 @media (max-width: 840px) {
-  .menu-items {
-    width: 100%;
+
+  .nav-header .container {
+    width: 90%;
+  }
+
+  .menu-items li {
+    padding: 0.5rem;
+  }
+
+  h1 {
+    font-size: 2rem;
   }
 
   #section-two .content {
